--- a/deploy/docker-compose.yaml
+++ b/deploy/docker-compose.yaml
@@ -4,6 +4,7 @@ services:
     container_name: auth_service
     ports:
       - "54821:54821"
+      - "10001:10001"
     environment:
       - CONFIG_PATH=/auth/config/config.docker.yaml
     depends_on:
@@ -24,6 +25,7 @@ services:
     container_name: notify
     ports:
       - "54822:54822"
+      - "10004:10004"
     environment:
       - CONFIG_PATH=/notify/config/config.docker.yaml
     volumes:
@@ -41,6 +43,7 @@ services:
     container_name: menu_service
     ports:
       - "50052:50052"
+      - "10003:10003"
     environment:
       - CONFIG_PATH=/menu/config/config.docker.yaml
     depends_on:
@@ -61,6 +64,7 @@ services:
     container_name: order_service
     ports:
       - "50051:50051" # gRPC port
+      - "10005:10005" # gRPC port
     environment:
       - CONFIG_PATH=/order/config/config.docker.yaml
     volumes:
@@ -81,6 +85,7 @@ services:
     container_name: user_service
     ports:
       - "50045:50045"
+      - "10006:10006"
     environment:
       - CONFIG_PATH=/user/config/config.docker.yaml
     volumes:
@@ -101,6 +106,7 @@ services:
     container_name: gate
     ports:
       - "8080:8080"
+      - "10002:10002"
     environment:
       - CONFIG_PATH=/gate/config/config.docker.yaml
     volumes:
@@ -330,7 +336,6 @@ services:
     environment:
       - GF_AUTH_ANONYMOUS_ENABLED=true
       - GF_AUTH_ANONYMOUS_ORG_ROLE=Admin
-      - GF_METRICS_ENABLED=true
     depends_on:
       - loki
     networks:
@@ -410,7 +415,7 @@ services:
       - ./config/prometheus/prometheus.yaml:/etc/prometheus/prometheus.yaml
       - prometheus_data:/prometheus
     command:
-      - "--config.file=/etc/prometheus/prometheus.yml"
+      - "--config.file=/etc/prometheus/prometheus.yaml"
       - "--storage.tsdb.path=/prometheus"
       - "--web.console.libraries=/etc/prometheus/console_libraries"
       - "--web.console.templates=/etc/prometheus/consoles"
@@ -430,6 +435,8 @@ services:
     ports:
       - "16686:16686" # UI
       - "14250:14250" # OTLP gRPC receiver
+    environment:
+      - COLLECTOR_OTLP_ENABLED=true
     networks:
       - risp
     logging:
