--- a/deploy/config/gate/config.docker.yaml
+++ b/deploy/config/gate/config.docker.yaml
@@ -27,4 +27,4 @@ telemetry:
   serviceVersion: "1.0.0"
   environment: "production"
   metricsPort: 10002
-  traceEndpoint: "jaeger:4317"
+  traceEndpoint: "otel-collector:4317"
