--- a/deploy/config/menu/config.docker.yaml
+++ b/deploy/config/menu/config.docker.yaml
@@ -28,4 +28,4 @@ telemetry:
   serviceVersion: "1.0.0"
   environment: "production"
   metricsPort: 10003
-  traceEndpoint: "jaeger:4317"
+  traceEndpoint: "otel-collector:4317"
