--- a/deploy/config/order/config.docker.yaml
+++ b/deploy/config/order/config.docker.yaml
@@ -32,4 +32,4 @@ telemetry:
   serviceVersion: "1.0.0"
   environment: "production"
   metricsPort: 10005
-  traceEndpoint: "otel-collector:4317"
+  traceEndpoint: "jaeger:4317"
