feat: auth && user kafka

--- a/deploy/config/auth/config.docker.yaml
+++ b/deploy/config/auth/config.docker.yaml
@@ -43,3 +43,8 @@ telemetry:
   environment: "production"
   metricsPort: 10001
   traceEndpoint: "jaeger:4317"
+
+kafka:
+  brokers:
+    - "kafka:9092"
+  topic: "user-events"
