--- a/deploy/config/envoy/envoy.yaml
+++ b/deploy/config/envoy/envoy.yaml
@@ -45,6 +45,14 @@ static_resources:
                         - match: { prefix: "/" }
                           route: { cluster: user_service }
 
+                    - name: minio
+                      domains: ["minio.localhost", "localhost", "*"]
+                      routes:
+                        - match: { prefix: "/" }
+                          route:
+                            cluster: minio
+                            host_rewrite_literal: minio
+
                     - name: gate
                       domains: ["*", "localhost"]
                       routes:
@@ -143,3 +151,17 @@ static_resources:
                     socket_address:
                       address: gate
                       port_value: 8080
+
+    - name: minio
+      connect_timeout: 0.5s
+      type: strict_dns
+      lb_policy: round_robin
+      load_assignment:
+        cluster_name: minio
+        endpoints:
+          - lb_endpoints:
+              - endpoint:
+                  address:
+                    socket_address:
+                      address: minio
+                      port_value: 9000
