--- a/deploy/config/menu/config.docker.yaml
+++ b/deploy/config/menu/config.docker.yaml
@@ -1,7 +1,7 @@
 env: "prod"
 
 minio:
-  endpoint: "envoy:8080"
+  endpoint: "minio:9000"
   accessKey: "minioadmin"
   secretKey: "minioadmin"
   useSsl: false
